stop person sub-nav breaking over multiple lines on mobile
does mean it's now a bit small so maybe there is a better solution

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -293,6 +293,15 @@ ul {
                     color: $body-font-color;
                 }
             }
+            @media only screen and ( max-width: 500px ) {
+                font-size: 0.7em;
+                padding: 2px;
+
+                &.active {
+                    font-weight: normal;
+                    color: black;
+                }
+            }
         }
     }
 }
